added files, checkout, forms, login, property-search, register

--- a/forms.html
+++ b/forms.html
@@ -5,7 +5,7 @@
     <title>Register with US</title>
 </head>
 <body>
-    <form action="https://www.elformo.com/forms/b4b04009-c99b-4f8c-b5ab-cc386d7ed2d8" method="post" accept-charset="UTF-8">
+    <form method="POST" action="https://request-inspector.glitch.me/">
     <div>
         <h4>Email</h4>
     <input type="text" placeholder="Enter your email" id="email" name="email">
