added a practice form, added forms-html, added a stylesheet link to 'welcome.html' and an external stylesheet named welcome htmlsheet

--- a/forms.html
+++ b/forms.html
@@ -48,11 +48,13 @@
         </div>
         <div>
             <h5>Are you likely to recommend us to a friend?</h5>
+            <label for="opinion">
             <select id="opinion" name="opinion">
                 <option value="yes">Yes!</option>
                 <option value="no">No</option>
                 <option value="would rather not say">Would rather not say</option>
             </select>
+            </label>
 
         </div>
         <input type="submit" name="Submit">
