--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="welcomehtmlsheet.css"
     </head>
         <body>
             <h1 id="top">Welcome to Veridian Dynamics!</h1>
