added a bunch of css files

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 <body>
     <form action="https://request-inspector.glitch.me" method="post">
         <h3>Username:*</h3>
-         <input type="text" id="username" name="username" placeholder="username" required>
+         <input type="text" id="username" name="username" autofocus placeholder="username" required>
         <h3>Email:*</h3>
             <input type="text" id="email" name="username" placeholder="email" required>
         <h3>Password:*</h3>
