--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="welcomehtmlsheet.css"
+    <link rel="stylesheet" href="welcomehtmlsheet.css">
     </head>
         <body>
-            <h1 id="top">Welcome to Veridian Dynamics!</h1>
+            <h1 id="main-header"><span class="offset"><em>Welcome</em></span><br> to<br> <span class="offset">Veridian</span> <span class="dy">Dynamics!</span></h1>
             <H3>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology</strong></em></H3>
             <hr>
 
@@ -51,7 +51,7 @@
             <div>
                 <h2>Company Vision</h2>
                 <table>
-                    <tr>
+                    <tr id="photo-table">
                         <th><img src="images/amazing-animal-beautiful-beautifull.jpg" alt="amazing animal"></th>
                         <th><img src="images/pexels-photo-66997.jpeg" alt="second photo"></th>
                     <tr>
@@ -65,7 +65,7 @@
                 <div>
                     <h2>Our Product</h2>
 
-                    <table>
+                    <table border="600">
                         <tr>
                             <th>Plan</th>
                             <th>Price</th>
