added css style sheets and files

--- a/form practice.html
+++ b/form practice.html
@@ -29,10 +29,17 @@
             <input id="button5" type="radio" name="buttons">Button Five
         </label>
         <button type="submit">Submit</button>
-    </form>
     <hr>
     <!-- These are nothing but check boxes -->
-    <form method="POST" action="https://request-inspector.glitch.me/">
+    <label for="checkbox1">
+        <input id="checkbox1" type="checkbox" name="checkboxes">
+    </label>
+    <label for="checkbox2">
+        <input id="checkbox2" type="checkbox" name="checkboxes">
+    </label>
+    <label for="checkbox3">
+        <input id="checkbox3" type="checkbox" name="checkboxes">
+    </label>
 
     </form>
     
