--- a/github.html
+++ b/github.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub</title>
-    <link rel="stylesheet" href="github.css">
+    <link rel="stylesheet" href="css/github.css">
 </head>
 <body>
     <div class="nav-header">
