--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="welcomehtmlsheet.css">
+    <link rel="stylesheet" href="css/welcomehtmlsheet.css">
     </head>
         <body>
             <h1 id="main-header"><span class="offset"><em>Welcome</em></span><br> to<br> <span class="offset">Veridian</span> <span class="dy">Dynamics!</span></h1>
