--- a/order-pizza.html
+++ b/order-pizza.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Pizza World</a>
+        <a class="navbar-brand" href="#">  <i class="fab fa-apple"> </i>  Pizza World</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search Stores Near You!</button>
                 </form>
             </ul>
-            <button class="navbar-sign-in" type="button">Sign Up</button>
+            <button class="navbar-sign-in" type="button"><i class="fas fa-user"></i> Sign Up!</button>
         </div>
     </nav>
     <div class>
