making sure that all files are up to date

--- a/external_js.html
+++ b/external_js.html
@@ -6,7 +6,7 @@
 </head>
 <style>
     h2 {
-        font-family: Courier;
+        font-family: "Andale Mono";
     }
 
     .landon {
@@ -15,23 +15,30 @@
     }
 
     .q1 {
-        background-color: #0fb784;
+        background-color: white;
+        color: black;
     }
 
     .q2 {
-        background-color: darkgrey;
+        background-color: black;
+        color: white;
+        font-weight: bolder;
     }
 
     .q3 {
-        background-color: #0fb784;
+        background-color: white;
+        color: black;
+        font-weight: bolder;
     }
 
     .q4 {
-        background-color: darkgrey;
+        background-color: black;
+        color: white;
     }
 
     .calculator {
-        background-color: #0fb784;
+        background-color: black;
+        color: white;
         padding-bottom: 3em;
     }
 
