updated loops exercises

--- a/loops.html
+++ b/loops.html
@@ -7,7 +7,7 @@
 <body>
     <script type="javascript" src="js/while.js"></script>
     <script type="javascript" src="js/for_loops.js"></script>
-
+    <script type="javascript" src="js/break_and_continue.js"></script>
 l
 
 
