made a few changes

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -30,7 +30,7 @@
     <br>
     <button id="btn2">Press this to change the paragraph contents</button>
     <br>
-    <button id="btn3">Change the background color of the page to red</button>
+    <button id="btn3">Change the background color of the page to blue</button>
 
 
     <script>
@@ -91,7 +91,7 @@
 
 
             function changeBackGroundColor(){
-            document.getElementsByName('body').style.backgroundColor = 'red';
+            document.getElementsByName('body').style.backgroundColor = '#0066ff';
             }
 
             document.getElementById('btn3').addEventListener('click', changeBackGroundColor);
