--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -4,11 +4,19 @@
     <style type="text/css">
         #map-canvas {
             width: 100%;
-            height: 750px;
+            height: 650px;
+        }
+        body {
+            background-color: #6669B1;
+            text-align: center;
+            color: #E6ECF0;
+            font-size:1.5em;
+            letter-spacing: .3em;
         }
     </style>
 </head>
 <body>
+    <h1>GOOGLE MAP</h1>
     <!-- div to hold map -->
     <div id="map-canvas"></div>
     <!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
