just changing random things with jquery

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -23,7 +23,39 @@
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
     </p>
-
+    <p class="paragraph-one">This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        <br>
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+    </p>
+    <p class="paragraph-two">This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        <br>
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+    </p>
+    <p class="paragraph-three">This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        <br>
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+        This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
+    </p>
     <div class="codeup">
         <h6>this is a div holding an h6</h6>
     </div>
@@ -39,7 +71,7 @@
     </ul>
     <!--jquery link-->
     <script src="js/jquery-2.x-git.js"></script>
-
+<!--jquery js/css changing and other fun stuff-->
     <script>
     $(document).ready ( function() {
         alert('The page has finished loading!');
@@ -53,9 +85,12 @@
         $(' .codeup ').css('border', 'solid 1px red');
 
         $(' li ').css('font-size', '20px');
+
+        $('.paragraph-three').css('background-color', 'red');
+
+        $('.paragraph-one').css('font-family', 'monospace');
     });
-    var h1Contents = $('h1');
-    alert(h1Contents);
+
 </script>
 </body>
 </html>
