--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>jquery exercise</title>
-<!--jquery link-->
+    <!--jquery link-->
 </head>
 <body>
     <h1 id="main-header">HELLO WORLD!!!</h1>
@@ -16,7 +16,7 @@
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
-<br>
+        <br>
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
         This is a paragraph, and this is also still a paragraph. The quick brown fox, jumps over the lazy brown dog.
@@ -60,7 +60,7 @@
         <h6>this is a div holding an h6</h6>
     </div>
 
-<h1 class="codeup">this is an unordered list</h1>
+    <h1 class="codeup">this is an unordered list</h1>
     <ul>
         <li>list item 1</li>
         <li>list item 2</li>
@@ -71,26 +71,28 @@
     </ul>
     <!--jquery link-->
     <script src="js/jquery-2.x-git.js"></script>
-<!--jquery js/css changing and other fun stuff-->
+    <!--jquery js/css changing and other fun stuff-->
     <script>
-    $(document).ready ( function() {
-        alert('The page has finished loading!');
+        $(document).ready(function () {
 
-        var contents = $(' #main-header ').html();
-        alert(contents);
+            $('#main-header').click(function () {
+                $('#main-header').css('background-color', 'yellow');
+            });
 
-        var subContents = $(' #sub-header ');
-        alert(subContents);
+            $('p').dblclick(function () {
+                $(this).css('font-size', '18px');
+            });
 
-        $(' .codeup ').css('border', 'solid 1px red');
+            $('li').hover(
+                function () {
+                    $(this).css('color', 'red');
+                },
+                function () {
+                    $(this).css('color', '');
+                }
+            );
+        });
 
-        $(' li ').css('font-size', '20px');
-
-        $('.paragraph-three').css('background-color', 'red');
-
-        $('.paragraph-one').css('font-family', 'monospace');
-    });
-
-</script>
+    </script>
 </body>
 </html>
