first set of konami code is done

--- a/dogpark.html
+++ b/dogpark.html
@@ -4,7 +4,7 @@
     <title>map test</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="dogpark.css">
+    <link rel="stylesheet" type="text/css" href="css/dogpark.css">
 </head>
 <body>
     <h1 class="header">Dog Parks In Your Area!</h1>
@@ -74,6 +74,6 @@
         }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg&callback=initMap" async defer></script>
-    <script src="dogpark.js"></script>
+    <script src="js/dogpark.js"></script>
 </body>
 </html>
