--- a/konami.html
+++ b/konami.html
@@ -9,10 +9,6 @@
     <script src="js/jquery-2.x-git.js"></script>
     <script>
         "use strict";
-
-            // $(document).keyup(function (event) {
-            //     console.log(event.keyCode);
-            // });
         var allowedKeys = {
             37: 'left',
             38: 'up',
@@ -24,19 +20,27 @@
         var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
         var konamiCodePosition = 0;
 
-        document.addEventListener('keydown', function(e) {
+
+
+
+        document.addEventListener('keydown', function (e) {
             var key = allowedKeys[e.keyCode];
             var requiredKey = konamiCode[konamiCodePosition];
             if (key == requiredKey) {
                 konamiCodePosition++;
                 if (konamiCodePosition == konamiCode.length) {
-                    $('body').css('background-color', 'red');
+                    var audio = document.createElement('audio');
+                    audio.src = ('Mario-walking.wav');
+                    audio.play();
+                    console.log('working');
+                    // audio.play();
                     konamiCodePosition = 0;
                 }
             } else {
                 konamiCodePosition = 0;
             }
         });
+
 
 
 
