finsihed exercise for national parks

--- a/konami.html
+++ b/konami.html
@@ -5,24 +5,12 @@
 </head>
 <body>
     <h1>Konami Code</h1>
-
     <script src="js/jquery-2.x-git.js"></script>
     <script>
         "use strict";
-        var allowedKeys = {
-            37: 'left',
-            38: 'up',
-            39: 'right',
-            40: 'down',
-            65: 'a',
-            66: 'b'
-        };
+        var allowedKeys = { 37: 'left', 38: 'up', 39: 'right', 40: 'down', 65: 'a', 66: 'b'};
         var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
         var konamiCodePosition = 0;
-
-
-
-
         document.addEventListener('keydown', function (e) {
             var key = allowedKeys[e.keyCode];
             var requiredKey = konamiCode[konamiCodePosition];
@@ -32,18 +20,12 @@
                     var audio = document.createElement('audio');
                     audio.src = ('Mario-walking.wav');
                     audio.play();
-                    console.log('working');
-                    // audio.play();
                     konamiCodePosition = 0;
                 }
             } else {
                 konamiCodePosition = 0;
             }
         });
-
-
-
-
     </script>
 </body>
 </html>
