--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -1,117 +1,171 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--<meta charset="UTF-8">-->
+<!--<title>Jquery faq</title>-->
+<!--<style>-->
+<!--.invisible {-->
+<!--display: none;-->
+<!--}-->
+<!--dt{-->
+<!--font-weight: bolder;-->
+<!--background-color: #6669B1;-->
+<!--color: #E6ECF0;-->
+<!--font-size: 2.5em;-->
+<!--display: inline;-->
+<!--}-->
+<!--h1{-->
+<!--font-size: 3.5em;-->
+<!--font-weight: bold;-->
+<!--background-color: green;-->
+<!--color: orange;-->
+<!--}-->
+<!--hr{-->
+<!--height: .5em ;-->
+<!--color: black;-->
+<!--background-color: gray;-->
+<!--}-->
+<!--#header{-->
+<!--background-color: #848487;-->
+<!--}-->
+<!--</style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div id="header">-->
+<!--<h1>Fun Facts About National Parks</h1>-->
+<!--</div>-->
+<!--<dl>-->
+<!--<dt>Fact 1</dt>-->
+<!--<dd>In the National Park System, there are 407 sites covering more than 84 million acres of land</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 2</dt>-->
+<!--<dd>The Appalachian Trail is a 2,185 mile long public footpath that traverses the scenic, wooded, pastoral, wild, and-->
+<!--culturally-->
+<!--resonant-->
+<!--lands of the Appalachian Mountains.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 3</dt>-->
+<!--<dd>In 2014, more than 290 million people visited the National Parks.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 4</dt>-->
+<!--<dd>The nation’s deepest cave is 1,593 ft deep in New Mexico at Carlsbad Caverns National Park.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 5</dt>-->
+<!--<dd>Originally established by Congress as Hot Springs Reservation in 1832 and later becoming a national park in 1921, Hot-->
+<!--Springs-->
+<!--National-->
+<!--Park represents the oldest protected area in the National Park System-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 6</dt>-->
+<!--<dd>In the National Park System there are: 124 historical parks or sites, 78 national monuments, 59 national parks, 25-->
+<!--battlefields or-->
+<!--military parks, 18 preserves, 18 recreational areas, 10 seashores, 4 parkways, 4 lakeshores and 2 reserves.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 7</dt>-->
+<!--<dd>Yosemite National Park supports more than 400 species of vertebrates including fish, amphibians, reptiles, birds, and-->
+<!--mammals.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 8</dt>-->
+<!--<dd>There is 1 active volcano, thousands of petrified trees, and almost 300 waterfalls in Yellowstone National Park.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 9</dt>-->
+<!--<dd>Seneca Falls National Park in New York is the location of the First Women’s Right Conventions, where expanding rights of-->
+<!--women were-->
+<!--discussed in the mid-19th century.-->
+<!--</dd>-->
+
+<!--<hr>-->
+
+<!--<dt>Fact 10</dt>-->
+<!--<dd>The largest living things in the world are in National Parks: Sequoia trees and Alaskan brown bears (the world’s-->
+<!--largest-->
+<!--living-->
+<!--carnivores).-->
+<!--</dd>-->
+<!--</dl>-->
+<!--<script src="js/jquery-2.x-git.js"></script>-->
+<!--<script>-->
+<!--$('dd').addClass('invisible');-->
+<!--$('dt').click(function () {-->
+<!--$(this).next().toggleClass('invisible')-->
+<!--});-->
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Jquery faq</title>
     <style>
-        .invisible {
-            display: none;
-        }
-        dt{
-            font-weight: bolder;
-            background-color: #6669B1;
-            color: #E6ECF0;
-            font-size: 2.5em;
-            display: inline;
-        }
-        h1{
-            font-size: 3.5em;
-            font-weight: bold;
-            background-color: green;
-            color: orange;
-        }
-        hr{
-            height: .5em ;
-            color: black;
-            background-color: gray;
-        }
-        #header{
-            background-color: #848487;
-        }
+
     </style>
 </head>
 <body>
-    <div id="header">
-    <h1>Fun Facts About National Parks</h1>
-    </div>
-    <dl>
-        <dt>Fact 1</dt>
-        <dd>In the National Park System, there are 407 sites covering more than 84 million acres of land</dd>
 
-        <hr>
 
-        <dt>Fact 2</dt>
-        <dd>The Appalachian Trail is a 2,185 mile long public footpath that traverses the scenic, wooded, pastoral, wild, and
-            culturally
-            resonant
-            lands of the Appalachian Mountains.
-        </dd>
+    <h3 id="national-parks-heading">National Parks</h3>
+    <ul id="national-parks">
+        <li>Arches</li>
+        <li>Badlands</li>
+        <li>Carlsbad Caverns</li>
+        <li>Denali</li>
+        <li>Everglades</li>
+    </ul>
 
-        <hr>
+    <h3>State Parks of Texas</h3>
+    <ul id="state-parks-texas">
+        <li>Abilene</li>
+        <li>Big Bend</li>
+        <li>Choke Canyon</li>
+        <li>Davis Mountains</li>
+        <li>Enchanted Rock</li>
+    </ul>
 
-        <dt>Fact 3</dt>
-        <dd>In 2014, more than 290 million people visited the National Parks.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 4</dt>
-        <dd>The nation’s deepest cave is 1,593 ft deep in New Mexico at Carlsbad Caverns National Park.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 5</dt>
-        <dd>Originally established by Congress as Hot Springs Reservation in 1832 and later becoming a national park in 1921, Hot
-            Springs
-            National
-            Park represents the oldest protected area in the National Park System
-        </dd>
-
-        <hr>
-
-        <dt>Fact 6</dt>
-        <dd>In the National Park System there are: 124 historical parks or sites, 78 national monuments, 59 national parks, 25
-            battlefields or
-            military parks, 18 preserves, 18 recreational areas, 10 seashores, 4 parkways, 4 lakeshores and 2 reserves.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 7</dt>
-        <dd>Yosemite National Park supports more than 400 species of vertebrates including fish, amphibians, reptiles, birds, and
-            mammals.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 8</dt>
-        <dd>There is 1 active volcano, thousands of petrified trees, and almost 300 waterfalls in Yellowstone National Park.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 9</dt>
-        <dd>Seneca Falls National Park in New York is the location of the First Women’s Right Conventions, where expanding rights of
-            women were
-            discussed in the mid-19th century.
-        </dd>
-
-        <hr>
-
-        <dt>Fact 10</dt>
-        <dd>The largest living things in the world are in National Parks: Sequoia trees and Alaskan brown bears (the world’s
-            largest
-            living
-            carnivores).
-        </dd>
-    </dl>
+    <h3>State Parks of California</h3>
+    <ul id="cali-state-parks">
+        <li>Yosemite</li>
+        <li>Joshua Tree</li>
+        <li>Pinnacles</li>
+        <li>Big Sur</li>
+    </ul>
+    <button id="yellow-button">Make the background of the last list item yellow in each list</button>
     <script src="js/jquery-2.x-git.js"></script>
     <script>
-        $('dd').addClass('invisible');
-        $('dt').click(function () {
-                $(this).next().toggleClass('invisible')
-        });
+
+        $('body').ready(
+            $('#yellow-button').click(function () {
+               $('ul').each(function () {
+                   $("li").each(function () {
+                       $(this).last().css('background-color', 'yellow');
+                   })
+               })
+            }
+        ));
+
     </script>
 </body>
 </html>
