--- a/ajax-store.html
+++ b/ajax-store.html
@@ -5,33 +5,38 @@
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+    <h1>My Tool Store</h1>
 
-<table id="products">
-    <thead>
+    <table id="products">
+        <thead>
         <tr>
             <th>Title</th>
             <th>Quantity</th>
             <th>Price</th>
             <th>Categories</th>
         </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
+        </thead>
+        <tbody id="insertProducts"></tbody>
+    </table>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<script>
-(function() {
-    "use strict";
-    // TODO: Create an ajax GET request for /data/inventory.json
+    <script>
+        (function () {
+            "use strict";
+            // TODO: Create an ajax GET request for /data/inventory.json
 
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-})();
-</script>
+            $.ajax("data/inventory.json");
+
+
+            // TODO: Take the data from inventory.json and append it to the products table
+            //       HINT: Your data should come back as a JSON object; use console.log() to inspect
+            //             its contents and fields
+            //       HINT: You will want to target #insertProducts for your new HTML elements
+            
+
+        })();
+    </script>
 
 </body>
 </html>
