--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Ajax Blog</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     <div id="wall"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <script>
     "use strict";
     var post = "";
@@ -20,10 +23,12 @@
                 console.log(item.categories);
                 console.log(item.date);
 
+                post += "<div class= 'container'>";
                 post += "<h1>" + item.title + "</h1>";
                 post += "<p>" + item.content + "</p>";
                 post += "<h4>" + item.categories + "</h4>";
                 post += "<h5>" + item.date + "</h5>";
+                post += "</div>";
 
                 $('#wall').html(post);
             })
